修改了模型的代码，现在整个后端都可以运行了，不知道跟前端结合会不会出错